ADDED: powershell scripts to run code in Windows